--- a/src/pages/2022/covid19.mdx
+++ b/src/pages/2022/covid19.mdx
@@ -7,7 +7,7 @@ import { CTAButton } from "../../components/button/CTAButton";
   
 oSTEM, Inc. seeks to provide a safe and healthy environment for all conference participants. With this goal in mind, oSTEM has complied with guidance from local, state, and federal entities and developed its own policies and procedures for employees, vendors, sponsors and guests when attending in-person events.
 
-This document lists the COVID-19 related policies and safety measures that are in effect for attending in-person convenings hosted by oSTEM, Inc. in 2022. oSTEM, Inc. requires the acknowledgement of these policies during registration in advance of the hosted conference, and for every participant to abide by these policies during the event. For any questions related to these policies, please reach out to conference-logistics@ostem.org.
+This document lists the COVID-19 related policies and safety measures that are in effect for attending in-person convenings hosted by oSTEM, Inc. in 2022. oSTEM, Inc. requires the acknowledgement of these policies during registration in advance of the hosted conference, and for every participant to abide by these policies during the event. For any questions related to these policies, please reach out to staff@ostem.org.
 
 ## Vaccine Policy Statement
   
@@ -15,7 +15,7 @@ oSTEM believes that vaccines are one of the most powerful tools to fight COVID-1
 
 This means receiving all recommended doses of the primary vaccination series and any vaccine booster doses [recommended by the Centers for Disease Control and Prevent known as the CDC](https://www.cdc.gov/coronavirus/2019-ncov/vaccines/stay-up-to-date.html). By registering for and participating in an event hosted by oSTEM, participants certify that they are up to date with COVID-19 vaccination, or will be up to date with COVID-19 vaccination, by the date of the event. oSTEM accepts full vaccination by vaccines that are approved or authorized by the U.S. Food and Drug Administration (FDA), and vaccines that are listed for Emergency Use (EUL) by the World Health Organization (WHO). An overview of these accepted vaccines can be found on the CDC website.
 
-We recognize that not everyone may be able to get a vaccine due to medical conditions or religious beliefs. To seek a reasonable accommodation to attend in-person meetings, please email conference-logistics@ostem.org by October 21, 2021. This information will be used by oSTEM to determine eligibility for an exemption.
+We recognize that not everyone may be able to get a vaccine due to medical conditions or religious beliefs. To seek a reasonable accommodation to attend in-person meetings, please email staff@ostem.org by October 21, 2021. This information will be used by oSTEM to determine eligibility for an exemption.
   
 ## COVID-19 Testing
   
@@ -40,7 +40,7 @@ oSTEM cannot enforce social distance guidelines during the event and for individ
 
 ## Testing Positive for COVID-19
   
-If any participant receives a positive COVID-19 test result either during or within 48 hours after the conclusion of an oSTEM-sponsored convening, they should notify a member of the oSTEM Conference team via conference@ostem.org. Our team will connect with the participant to offer support, ask some questions about their presence at the event and who they may have been in contact with, discuss travel plans and any isolation/quarantine guidance, and provide next steps.
+If any participant receives a positive COVID-19 test result either during or within 48 hours after the conclusion of an oSTEM-sponsored convening, they should notify an oSTEM staff member via staff@ostem.org. Our team will connect with the participant to offer support, ask some questions about their presence at the event and who they may have been in contact with, discuss travel plans and any isolation/quarantine guidance, and provide next steps.
 
 A participant who tests positive for COVID-19 should monitor symptoms and if they become severe (such as persistent pain or pressure in the chest, confusion, or bluish lips or face), seek medical attention.
 
