--- a/src/pages/2022/covid19.mdx
+++ b/src/pages/2022/covid19.mdx
@@ -11,7 +11,7 @@ This document lists the COVID-19 related policies and safety measures that are i
 
 ## Vaccine Policy Statement
   
-oSTEM believes that vaccines are one of the most powerful tools to fight COVID-19, save lives, and create a safe environment for those who attend oSTEM-sponsored events. As such, oSTEM highly recommends and encourages that all participants in its in-person meetings and events be “up to date” with their COVID-19 vaccination.
+oSTEM believes that vaccines are one of the most powerful tools to fight COVID-19, save lives, and create a safe environment for those who attend oSTEM-sponsored events. As such, oSTEM highly requires that all participants in its in-person meetings and events be “up to date” with their COVID-19 vaccination.
 
 This means receiving all recommended doses of the primary vaccination series and any vaccine booster doses [recommended by the Centers for Disease Control and Prevent known as the CDC](https://www.cdc.gov/coronavirus/2019-ncov/vaccines/stay-up-to-date.html). By registering for and participating in an event hosted by oSTEM, participants certify that they are up to date with COVID-19 vaccination, or will be up to date with COVID-19 vaccination, by the date of the event. oSTEM accepts full vaccination by vaccines that are approved or authorized by the U.S. Food and Drug Administration (FDA), and vaccines that are listed for Emergency Use (EUL) by the World Health Organization (WHO). An overview of these accepted vaccines can be found on the CDC website.
 
