--- a/src/pages/2022/covid19.mdx
+++ b/src/pages/2022/covid19.mdx
@@ -8,6 +8,8 @@ import { CTAButton } from "../../components/button/CTAButton";
 oSTEM, Inc. seeks to provide a safe and healthy environment for all conference participants. With this goal in mind, oSTEM has complied with guidance from local, state, and federal entities and developed its own policies and procedures for employees, vendors, sponsors and guests when attending in-person events.
 
 This document lists the COVID-19 related policies and safety measures that are in effect for attending in-person convenings hosted by oSTEM, Inc. in 2022. oSTEM, Inc. requires the acknowledgement of these policies in advance of the hosted conference, and for every participant to abide by these policies during the event. For any questions related to these policies, please reach out to staff@ostem.org.
+  
+**As a condition of your admission to all oSTEM, Inc. sponsored or supported events, you will be required to complete this attestation upon your arrival at the conference:** https://cdn.ostem.org/publicfiles/Onsite_COVID_Health_Screening_Form.pdf
 
 ## Vaccine Policy Statement
   
