--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -27,7 +27,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     </div>
     <p className="p-4">
       Call for Posters Open: June 2023 <br />
-      Call for Chapter Award Nominations Open: June 21, 2023 <br />
+      Call for Chapter Award Nominations: Deadline is September 1, 2023 <br />
       Early Bird Registration: July 2023 <br />
       Full-Priced Registration: August 2023 <br />
       Registration Deadline: October 15, 2023 <br />
@@ -76,10 +76,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       with 1,000+ LGBTQ+ students, professionals, and recruiters in STEM fields
       from across the country and around the globe. This space is designed for
       attendees to share their professional and personal experiences and learn
-      from one another in an authentic and vulernable way. Programs and content
-      range from introspective including safer spaces to talk about queer issues
-      and career development to technical such as discussing the latest in
-      research conducted by our members. The Career & Graduate School Expo
+      from one another in an authentic and vulnerable way. Programs and content
+      range from introspective (e.g., safer spaces to talk about queer issues
+      and career development) to technical (e.g., discussing the latest in
+      research conducted by our members). The Career & Graduate School Expo
       allows attendees to connect and network with professionals, academics, and
       colleagues from STEM industries and universities. For more examples of
       sessions, speakers, and career expo exhibitors, click here for the 2022
